# rbxtrello

./: .env.example  .gitignore  Cargo.toml  LICENSE.md  Makefile  README.md
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs  utils.rs
src/api/: mod.rs  model.rs  trello.rs
src/sync/: board.rs  diff.rs  mod.rs  pull.rs  push.rs
src/templates/: rbxtrello.toml.template
src/ui/: confirm.rs  diffs.rs  mod.rs
tests/: schema.rs
